--- a/style.css
+++ b/style.css
@@ -14,14 +14,12 @@
 }
 
 body {
-  background: gray;
-  font: PopLight;
-  height: 2000px;
+  font: PopMedium;
 }
 
 nav {
-  background: -webkit-gradient(linear, left top, left bottom, from(#FFFFFF), to(#DAD6D6));
-  background: linear-gradient(180deg, #FFFFFF 0%, #DAD6D6 100%);
+  background: -webkit-gradient(linear, left top, left bottom, from(#ffffff), to(#dad6d6));
+  background: linear-gradient(180deg, #ffffff 0%, #dad6d6 100%);
 }
 
 nav .navbar-brand {
@@ -43,8 +41,6 @@ nav .nav-link {
 }
 
 #carousel {
-  height: 100vh;
-  width: 100vh;
   padding: 0;
   margin: 0;
 }
@@ -54,7 +50,53 @@ nav .nav-link {
   margin: 0;
 }
 
-.carousel-inner {
+#fleet-page {
+  background-color: red;
+  min-height: 50vh;
+  padding: 50px 0 100px 0;
+  text-align: center;
+}
+
+#fleet-page h1 {
+  color: #ffffff;
+  padding-bottom: 50px;
+}
+
+#fleet-page .card {
+  padding: 10px;
+  margin: auto;
+}
+
+.carousel-item {
   height: 100vh;
+  min-height: 350px;
+  background: no-repeat center center;
+  background-size: cover;
+}
+
+#about-page {
+  background: #ffffff;
+  min-height: 50vh;
+  text-align: center;
+  padding: 30px;
+  font-size: 28px;
+  letter-spacing: 0.01em;
+}
+
+#about-page p {
+  padding: 20px;
+}
+
+#contact-page {
+  text-align: center;
+  padding: 50px;
+  margin: auto;
+}
+
+footer {
+  text-align: center;
+  background: #444343;
+  color: #ffffff;
+  padding: 10px;
 }
 /*# sourceMappingURL=style.css.map */
