--- a/style.scss
+++ b/style.scss
@@ -27,10 +27,14 @@ nav {
   }
   #navbar-menu {
     margin: auto;
+    padding-left: 50px; 
   }
   .nav-link {
     color: rgb(36, 36, 36);
     font-size: 24px;
+  }
+  .nav-item{
+    padding: 0px 10px 0px 10px;
   }
 }
 
