--- a/style.scss
+++ b/style.scss
@@ -49,7 +49,7 @@ nav {
 }
 
 #fleet-page {
-  background-color: red;
+  background-color: #e21c2a;
   min-height: 50vh;
   padding: 50px 0 100px 0;
   text-align: center;
@@ -86,6 +86,9 @@ nav {
     text-align: center;
     padding: 50px;
     margin: auto;
+    .btn-send{
+      background: #e21c2a;
+    }
 }
 
 footer{
