--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
 
 body {
   font: PopMedium;
+  overflow-x: hidden;
 }
 
 nav {
@@ -92,6 +93,21 @@ nav .nav-item {
 
 #fleet-page .fleet-right {
   background-color: #e21c2a;
+}
+
+#fleet-page #coaches {
+  position: absolute;
+  right: -100%;
+  background: orange;
+  width: 100%;
+  min-height: 400px;
+  margin: 0;
+  padding: 0;
+  margin: 0;
+}
+
+#fleet-page #coaches #btn-right-close {
+  padding: 20px;
 }
 
 #contact-page {
