--- a/style.css
+++ b/style.css
@@ -76,6 +76,7 @@ nav .nav-item {
 #fleet-page {
   height: auto;
   text-align: center;
+  overflow: hidden;
 }
 
 #fleet-page .fleet-left, #fleet-page .fleet-right {
@@ -105,7 +106,7 @@ nav .nav-item {
 }
 
 #fleet-page #coaches #btn-right-close {
-  padding: 20px;
+  padding-top: 16px;
 }
 
 #fleet-page #coaches .card {
