--- a/style.scss
+++ b/style.scss
@@ -88,12 +88,13 @@ nav {
     background: #e21c2a;
     width: 100%;
     margin: 0;
-    padding: 0;
+    padding: 10px;
+    z-index: 2;
     #btn-right-close{
-      padding-top: 16px;
+      // padding-top: 0px;
     }
     .card{
-      margin: 30px;
+      margin: 6px 5px 0px 5px;
       ul{
         list-style-type: none;
       }
@@ -122,7 +123,7 @@ footer{
     text-align: center;
     background: rgb(68, 67, 67);
     color: #ffffff;
-    padding: 10px;
+    padding: 14px 0 1px 0;
 }
 
 
@@ -137,6 +138,23 @@ footer{
   .carousel-item{
     padding-top: 12vh;
   }
+  #fleet-page{
+    #coaches{
+      overflow-x: hidden;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 0;
+      height: 0;
+      z-index: 2;
+      .card-title{
+        font-size: 20px;
+      }
+      ul{
+        font-size: 14px;
+      }
+    }
+  }
 }
 
 @media screen and (max-width: 768px){
@@ -147,6 +165,7 @@ footer{
       padding: 10px;
     }
   }
+
   #contact-page{
     padding: 20px 30px 0px 30px;
     #contact-form{
