--- a/style.css
+++ b/style.css
@@ -45,17 +45,17 @@ nav .nav-item {
   padding: 0px 10px 0px 10px;
 }
 
-#carousel {
-  padding: 0;
-  margin: 0;
-}
-
 #front-page {
   padding: 0;
   margin: 0;
 }
 
-.carousel-item {
+#front-page #carousel {
+  padding: 0;
+  margin: 0;
+}
+
+#front-page #carousel .carousel-item {
   max-height: 100vh;
   background: no-repeat center center;
   background-size: cover;
@@ -79,11 +79,13 @@ nav .nav-item {
   overflow: hidden;
 }
 
-#fleet-page .fleet-left, #fleet-page .fleet-right {
+#fleet-page .fleet-left,
+#fleet-page .fleet-right {
   padding: 10px 20px 20px 20px;
 }
 
-#fleet-page .fleet-left h2, #fleet-page .fleet-right h2 {
+#fleet-page .fleet-left h2,
+#fleet-page .fleet-right h2 {
   padding: 20px;
   color: #ffffff;
 }
@@ -92,8 +94,18 @@ nav .nav-item {
   background-color: #161515;
 }
 
+#fleet-page .fleet-left #btn-left,
+#fleet-page .fleet-left #img-left {
+  cursor: pointer;
+}
+
 #fleet-page .fleet-right {
   background-color: #e21c2a;
+}
+
+#fleet-page .fleet-right #btn-right,
+#fleet-page .fleet-right #img-right {
+  cursor: pointer;
 }
 
 #fleet-page #coaches {
@@ -104,6 +116,10 @@ nav .nav-item {
   margin: 0;
   padding: 10px;
   z-index: 2;
+}
+
+#fleet-page #coaches #btn-right-close {
+  padding: 10px;
 }
 
 #fleet-page #coaches .card {
@@ -151,13 +167,18 @@ footer {
     padding-top: 12vh;
   }
   #fleet-page #coaches {
+    display: none;
     overflow-x: hidden;
     position: fixed;
     top: 0;
-    left: 0;
-    width: 0;
-    height: 0;
+    right: -100%;
+    width: 100%;
+    height: 100%;
     z-index: 2;
+    padding-top: 12vh;
+  }
+  #fleet-page #coaches .card {
+    margin-bottom: 10px;
   }
   #fleet-page #coaches .card-title {
     font-size: 20px;
