--- a/style.css
+++ b/style.css
@@ -120,14 +120,51 @@ nav .nav-item {
 
 #fleet-page #coaches #btn-right-close {
   padding: 10px;
+  cursor: pointer;
 }
 
 #fleet-page #coaches .card {
   margin: 6px 5px 0px 5px;
 }
 
+#fleet-page #coaches .card .mask {
+  cursor: pointer;
+}
+
 #fleet-page #coaches .card ul {
   list-style-type: none;
+}
+
+#fleet-page #buses {
+  position: absolute;
+  left: -100%;
+  background: #161515;
+  width: 100%;
+  margin: 0;
+  padding: 10px;
+  z-index: 2;
+}
+
+#fleet-page #buses #btn-left-close {
+  padding: 10px;
+  cursor: pointer;
+}
+
+#fleet-page #buses .card {
+  margin: 6px 5px 0px 5px;
+}
+
+#fleet-page #buses .card .mask {
+  cursor: pointer;
+}
+
+#fleet-page #buses .card ul {
+  list-style-type: none;
+}
+
+#fleet-page .carousel-control-prev-icon, #fleet-page .carousel-control-next-icon {
+  height: 90px;
+  width: 90px;
 }
 
 #contact-page {
@@ -163,7 +200,7 @@ footer {
     margin-left: 0;
     height: 50px;
   }
-  .carousel-item {
+  #front-page .carousel-item {
     padding-top: 12vh;
   }
   #fleet-page #coaches {
@@ -184,6 +221,26 @@ footer {
     font-size: 20px;
   }
   #fleet-page #coaches ul {
+    font-size: 14px;
+  }
+  #fleet-page #buses {
+    display: none;
+    overflow-x: hidden;
+    position: fixed;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    padding-top: 12vh;
+  }
+  #fleet-page #buses .card {
+    margin-bottom: 10px;
+  }
+  #fleet-page #buses .card-title {
+    font-size: 20px;
+  }
+  #fleet-page #buses ul {
     font-size: 14px;
   }
 }
