--- a/style.scss
+++ b/style.scss
@@ -99,18 +99,43 @@ nav {
     z-index: 2;
     #btn-right-close {
       padding: 10px;
+      cursor: pointer;
     }
     .card {
       margin: 6px 5px 0px 5px;
+      .mask{
+        cursor: pointer;
+      }
       ul {
         list-style-type: none;
       }
     }
   }
-  
-
-  .modal-full .modal-content {
-    
+  #buses {
+    position: absolute;
+    left: -100%;
+    background: #161515;
+    width: 100%;
+    margin: 0;
+    padding: 10px;
+    z-index: 2;
+    #btn-left-close {
+      padding: 10px;
+      cursor: pointer;
+    }
+    .card {
+      margin: 6px 5px 0px 5px;
+      .mask{
+        cursor: pointer;
+      }
+      ul {
+        list-style-type: none;
+      }
+    }
+  }
+  .carousel-control-prev-icon, .carousel-control-next-icon{
+    height: 90px;
+    width: 90px;
   }
 }
 
@@ -144,9 +169,12 @@ footer {
       height: 50px;
     }
   }
-  .carousel-item {
-    padding-top: 12vh;
+  #front-page{
+    .carousel-item {
+      padding-top: 12vh;
+    }
   }
+  
   #fleet-page {
     #coaches {
       display: none;
@@ -154,6 +182,26 @@ footer {
       position: fixed;
       top: 0;
       right: -100%;
+      width: 100%;
+      height: 100%;
+      z-index: 2;
+      padding-top: 12vh;
+      .card {
+        margin-bottom: 10px;
+      }
+      .card-title {
+        font-size: 20px;
+      }
+      ul {
+        font-size: 14px;
+      }
+    }
+    #buses {
+      display: none;
+      overflow-x: hidden;
+      position: fixed;
+      top: 0;
+      left: -100%;
       width: 100%;
       height: 100%;
       z-index: 2;
