--- a/style.scss
+++ b/style.scss
@@ -152,6 +152,10 @@ nav {
   .btn-send {
     background: #e21c2a;
   }
+  #status{
+    color: #e21c2a;
+    font-weight: bold;
+  }
 }
 
 footer {
