--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+/*
+    Theme Name: MK2 Theme
+    Author: Jan Ponichter
+    Version: 1.0
+*/
 * {
   padding: 0;
   margin: 0;
@@ -173,6 +178,10 @@ nav .nav-item {
   margin: auto;
 }
 
+#contact-page a[href^="mailto:"], #contact-page a[href^="https://goo.gl"], #contact-page a[href^="tel"] {
+  color: #161515;
+}
+
 #contact-page #contact-form {
   padding: 0px 50px 0px 50px;
 }
@@ -188,6 +197,14 @@ nav .nav-item {
 #contact-page #status {
   color: #e21c2a;
   font-weight: bold;
+}
+
+#contact-page #orders-page b, #contact-page #orders-page a {
+  color: #e21c2a;
+}
+
+#contact-page #orders-page ul {
+  list-style-type: none;
 }
 
 footer {
@@ -217,7 +234,6 @@ footer {
     width: 100%;
     height: 100%;
     z-index: 2;
-    padding-top: 12vh;
   }
   #fleet-page #coaches .card {
     margin-bottom: 10px;
@@ -237,7 +253,6 @@ footer {
     width: 100%;
     height: 100%;
     z-index: 2;
-    padding-top: 12vh;
   }
   #fleet-page #buses .card {
     margin-bottom: 10px;
