--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,8 @@
+/*
+    Theme Name: MK2 Theme
+    Author: Jan Ponichter
+    Version: 1.0
+*/
 * {
   padding: 0;
   margin: 0;
@@ -143,6 +148,9 @@ nav {
   text-align: center;
   padding: 50px;
   margin: auto;
+  a[href^="mailto:"], a[href^="https://goo.gl"], a[href^="tel"]{
+    color: #161515;
+  }
   #contact-form {
     padding: 0px 50px 0px 50px;
   }
@@ -155,6 +163,14 @@ nav {
   #status{
     color: #e21c2a;
     font-weight: bold;
+  }
+  #orders-page{
+    b, a{
+      color: #e21c2a;
+    }
+    ul{
+      list-style-type: none;
+    }
   }
 }
 
@@ -189,7 +205,7 @@ footer {
       width: 100%;
       height: 100%;
       z-index: 2;
-      padding-top: 12vh;
+      // padding-top: 12vh;
       .card {
         margin-bottom: 10px;
       }
@@ -209,7 +225,6 @@ footer {
       width: 100%;
       height: 100%;
       z-index: 2;
-      padding-top: 12vh;
       .card {
         margin-bottom: 10px;
       }
